// 物理システムの導入

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 ﻿# HALDXGame の CMake プロジェクト
-cmake_minimum_required(VERSION 3.8)
+cmake_minimum_required(VERSION 3.20)
 project(HALDXGame)
 
 # UTF-8 文字コードのサポート
@@ -18,11 +18,16 @@ if(POLICY CMP0141)
   set(CMAKE_MSVC_DEBUG_INFORMATION_FORMAT "$<IF:$<AND:$<C_COMPILER_ID:MSVC>,$<CXX_COMPILER_ID:MSVC>>,$<$<CONFIG:Debug,RelWithDebInfo>:EditAndContinue>,$<$<CONFIG:Debug,RelWithDebInfo>:ProgramDatabase>>")
 endif()
 
+# third_party ディレクトリの追加
+add_subdirectory(third_party/JoltPhysics/Build JoltBuild)
+
 #モジュールの追加
 add_subdirectory(src/modules/GameFramework)
+add_subdirectory(src/modules/Physics)
 
 # HALDXGame のソースコード
 add_executable(HALDXGame src/main.cpp)
 
 # HALDXGame のインクルードディレクトリ
 target_link_libraries(HALDXGame PRIVATE GameFramework)
+target_link_libraries(HALDXGame PRIVATE Physics)
