--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,10 @@ project(HALDXGame)
 
 # UTF-8 文字コードのサポート
 add_compile_options("$<$<CXX_COMPILER_ID:MSVC>:/utf-8>")
+# 在 Windows 平台强制使用 UTF-8
+if (WIN32)
+  add_definitions(-DUNICODE -D_UNICODE)
+endif()
 
 # C++20 標準
 set(CMAKE_CXX_STANDARD 20)
@@ -25,6 +29,10 @@ set(USE_DIRECTX_MATH TRUE CACHE BOOL "" FORCE)
 # directxmathConfig.cmake のチェックを回避するために、偽のパッケージパスを追加する
 set(CMAKE_PREFIX_PATH "${CMAKE_SOURCE_DIR}/cmake/fake_directxmath" ${CMAKE_PREFIX_PATH})
 
+#includeパスを追加する（Windows SDK ＋ DirectXTK）
+include_directories(${CMAKE_SOURCE_DIR}/third_party/DirectXTK/Inc)
+include_directories("C:/Program Files (x86)/Windows Kits/10/Include/10.0.22621.0/um")
+
 # third_party ディレクトリの追加
 add_subdirectory(third_party/JoltPhysics/Build JoltBuild)
 add_subdirectory(third_party/DirectXTK)
@@ -32,10 +40,22 @@ add_subdirectory(third_party/DirectXTK)
 #モジュールの追加
 add_subdirectory(src/modules/GameFramework)
 add_subdirectory(src/modules/Physics)
+add_subdirectory(src/modules/DX)
 
 # HALDXGame のソースコード
 add_executable(HALDXGame src/main.cpp)
 
+# プリコンパイル済みヘッダーを追加する
+target_precompile_headers(HALDXGame PRIVATE src/modules/DX/pch.h)
+
+# DirectXTK のリンクを追加する
+target_link_libraries(HALDXGame PRIVATE DirectXTK)
+
 # HALDXGame のインクルードディレクトリ
 target_link_libraries(HALDXGame PRIVATE GameFramework)
 target_link_libraries(HALDXGame PRIVATE Physics)
+target_link_libraries(HALDXGame PRIVATE DX)
+
+
+#  リソースフォルダ「assets」をビルドディレクトリにコピーする
+file(COPY ${CMAKE_SOURCE_DIR}/assets DESTINATION ${CMAKE_BINARY_DIR})
