日本語に翻訳する

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ project(HALDXGame)
 
 # UTF-8 文字コードのサポート
 add_compile_options("$<$<CXX_COMPILER_ID:MSVC>:/utf-8>")
-# 在 Windows 平台强制使用 UTF-8
+# Windows 環境で UTF-8 を強制的に使用する
 if (WIN32)
   add_definitions(-DUNICODE -D_UNICODE)
 endif()
@@ -31,7 +31,6 @@ set(CMAKE_PREFIX_PATH "${CMAKE_SOURCE_DIR}/cmake/fake_directxmath" ${CMAKE_PREFI
 
 #includeパスを追加する（Windows SDK ＋ DirectXTK）
 include_directories(${CMAKE_SOURCE_DIR}/third_party/DirectXTK/Inc)
-#include_directories("C:/Program Files (x86)/Windows Kits/10/Include/10.0.22621.0/um")
 
 # third_party ディレクトリの追加
 add_subdirectory(third_party/JoltPhysics/Build JoltBuild)
