--- a/src/modules/DX/CMakeLists.txt
+++ b/src/modules/DX/CMakeLists.txt
@@ -1,8 +1,15 @@
-﻿# 包含头文件目录
+﻿add_subdirectory(Common)
+
+# 包含头文件目录
 include_directories(${CMAKE_SOURCE_DIR}/third_party/DirectXTK/Inc)
 
+
 # 编译 DX 静态库
-add_library(DX STATIC .)
+file(GLOB DX_SRC
+        "*.cpp"
+)
+
+add_library(DX STATIC ${DX_SRC})
 
 # 添加 DirectXTK 头文件目录
 target_link_libraries(DX
@@ -13,11 +20,12 @@ target_link_libraries(DX
         uuid
 )
 
-
 target_precompile_headers(DX PRIVATE pch.h)
 
 target_link_libraries(DX PUBLIC DirectXTK)
 target_include_directories(DX PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 
+target_link_libraries(DX PRIVATE Common)
+target_include_directories(DX PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/Common)
 target_link_libraries(DX PUBLIC assimp)
 target_link_libraries(DX PUBLIC ImGui)
