--- a/src/modules/DX/Common/CMakeLists.txt
+++ b/src/modules/DX/Common/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.14)
 
 set(CMAKE_CXX_STANDARD 17)
-add_compile_options("$<$<CXX_COMPILER_ID:MSVC>:/utf-8>")
+#add_compile_options("$<$<CXX_COMPILER_ID:MSVC>:/utf-8>")
 add_compile_definitions(UNICODE _UNICODE)
 if (WIN7_SYSTEM_SUPPORT MATCHES ON)
     add_compile_definitions(_WIN32_WINNT=0x601)
@@ -10,7 +10,7 @@ endif()
 aux_source_directory(. COMMON_SRCS)
 file(GLOB COMMON_HEADERS ./*.h)
 add_library(Common STATIC ${COMMON_SRCS} ${COMMON_HEADERS})
-
+target_compile_options(Common PRIVATE "$<$<CXX_COMPILER_ID:MSVC>:/utf-8>")
 # ImGui
 target_link_libraries(Common ImGui)
 
