删除废弃代码

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -85,11 +85,7 @@ add_subdirectory(third_party/ImGui ImGui)
 
 #モジュールの追加
 add_subdirectory(src/modules/GameKit)
-add_subdirectory(src/modules/Physics)
 add_subdirectory(src/modules/DX DX)
-
-#テストモジュールの追加
-add_subdirectory(src/modules/RubikCube)
 
 file(GLOB_RECURSE BASE_CPP_FILES src/base/*.cpp)
 file(GLOB_RECURSE BASE_HEADER_FILES src/base/*.h)
@@ -112,11 +108,11 @@ target_compile_options(HALDXGame PRIVATE "$<$<CXX_COMPILER_ID:MSVC>:/utf-8>")
 # HALDXGame のインクルードディレクトリ
 target_link_libraries(HALDXGame PRIVATE DirectXTK)
 target_link_libraries(HALDXGame PRIVATE GameKit)
-target_link_libraries(HALDXGame PRIVATE Physics)
 target_link_libraries(HALDXGame PRIVATE DX)
 
 target_include_directories(HALDXGame PRIVATE
         ${CMAKE_SOURCE_DIR}/third_party/DirectXTK/Inc
+        ${CMAKE_SOURCE_DIR}/third_party/JoltPhysics
 )
 
 file(GLOB_RECURSE ALL_INCLUDE_DIRS LIST_DIRECTORIES true "${PROJECT_SOURCE_DIR}/src/*")
