学校老师作业提交

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -89,6 +89,9 @@ add_subdirectory(third_party/ImGui ImGui)
 add_subdirectory(src/modules/GameKit)
 add_subdirectory(src/modules/DX DX)
 
+# テストディレクトリの追加
+#add_subdirectory(SchoolTest SchoolTest)
+
 file(GLOB_RECURSE BASE_CPP_FILES src/base/*.cpp)
 file(GLOB_RECURSE BASE_HEADER_FILES src/base/*.h)
 file(GLOB_RECURSE GAMEPLAY_CPP_FILES src/gameplay/*.cpp)
