学校老师作业提交

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -76,8 +76,8 @@ add_subdirectory(third_party/JoltPhysics/Build JoltBuild)
 #include(third_party/JoltPhysics/Jolt/Jolt.cmake)
 #include(third_party/JoltPhysics/JoltViewer/JoltViewer.cmake)
 #include(third_party/JoltPhysics/PerformanceTest/PerformanceTest.cmake)
-#include(third_party/JoltPhysics/TestFramework/TestFramework.cmake)
-#include(third_party/JoltPhysics/Samples/Samples.cmake)
+include(third_party/JoltPhysics/TestFramework/TestFramework.cmake)
+include(third_party/JoltPhysics/Samples/Samples.cmake)
 #include(third_party/JoltPhysics/UnitTests/UnitTests.cmake)
 
 set(ASSIMP_BUILD_TESTS OFF CACHE BOOL "Build Assimp tests" FORCE)
