Enhance collision handling and add image component support - Updated BoxCollisionC and CollisionC to include IsSensor parameter - Implemented ImageC and ImageObject classes for image handling - Modified GamePlayScene to support automatic bullet firing - Adjusted Idol class for improved health management

--- a/src/modules/DX/Common/CMakeLists.txt
+++ b/src/modules/DX/Common/CMakeLists.txt
@@ -11,6 +11,9 @@ aux_source_directory(. COMMON_SRCS)
 file(GLOB COMMON_HEADERS ./*.h)
 add_library(Common STATIC ${COMMON_SRCS} ${COMMON_HEADERS})
 
+target_link_libraries(Common DirectXTK)
+target_include_directories(Common PUBLIC ${CMAKE_SOURCE_DIR}/third_party/DirectXTK/Inc)
+
 # ImGui
 target_link_libraries(Common ImGui)
 
